Visual updates TODO: Grid overlapping with events, fix z-index, Events and GridLines not alligned with HourTicks fix it

--- a/horizontalTimeline/src/ui/HorizontalTimelineStyle.css
+++ b/horizontalTimeline/src/ui/HorizontalTimelineStyle.css
@@ -3,7 +3,7 @@
 .htl-wrapper {
     overflow-x: auto;
     border: 2px solid #00ff40;
-    background: rgb(196, 198, 199);
+    background: rgba(196, 198, 199, 0.616);
     font-family: Arial;
     /*max-height: 100vh;*/
 }
@@ -12,7 +12,6 @@
 .htl-header {
     display: flex;
    /*margin-left: 140px;*/
-    height: 50px !important;
     position: sticky;
     top: 0;
     background: white;
@@ -69,15 +68,15 @@
 
 .htl-grid-line{
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 2px;
     overflow: hidden;
-    background: rgb(61, 61, 61);
+    background: rgba(196, 198, 199);
 }
 
 .htl-now-line{
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 2px;
     overflow: hidden;
     background: red;
@@ -109,10 +108,11 @@
 .htl-tooltip {
     position: relative;
     display: inline-block;
-    background: #333;
+    background-color: #333;
     color: white;
     padding: 5px 10px;
     border-radius: 4px;
+    z-index: 99;
     font-size: 12px;
     pointer-events: none;
     opacity: 0;
@@ -128,7 +128,8 @@
     top: 12px;
     height: 45px;
     background: #110e5a;
-    color: white;
+    color: black;
+    border: 1px solid #2f00ff;
     border-radius: 8px;
     padding: 10px;
     font-size: 13px;
